<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/default_bg"
    tools:context=".fragment.AhadethFragment">


   <TextView
       android:id="@+id/islamy_word"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:textColor="@color/black"
       android:textStyle="bold"
       android:textSize="30sp"
       android:text="@string/islamyWord"
       android:layout_marginTop="30dp"
       />

   <ImageView
       android:id="@+id/image"
       android:layout_width="313dp"
       android:layout_height="219dp"
       app:layout_constraintTop_toBottomOf="@id/islamy_word"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="5dp"
       android:src="@drawable/hadeth_logo"
       android:contentDescription="@string/todo" />

   <View
      android:id="@+id/firsthorizontleline"
       android:layout_width="match_parent"
       android:layout_height="2dp"
       app:layout_constraintTop_toBottomOf="@id/image"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:background="#B7935F"
       />

   <View
       android:id="@+id/secondhorizontleline"
       android:layout_width="match_parent"
       android:layout_height="2dp"
       app:layout_constraintTop_toBottomOf="@id/firsthorizontleline"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:background="#B7935F"
       android:layout_marginTop="40dp"
       />

   <TextView
       android:id="@+id/ahadethWord"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/firsthorizontleline"
       app:layout_constraintBottom_toTopOf="@id/secondhorizontleline"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:textSize="26sp"
       android:textColor="@color/black"
       android:text="@string/ahadethWord"/>

   <androidx.recyclerview.widget.RecyclerView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintTop_toBottomOf="@id/secondhorizontleline"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       tools:listitem="@layout/name_of_hadeth_items"
       />
</androidx.constraintlayout.widget.ConstraintLayout>